==============================================================================

v6.0.5 Nov 22 2014 (w/Gamma 1)
. (kfsone) Added "import" sub-command for loading 1+ stations from a file
. (kfsone) Added "--height" (-H) option to update GUI
. (kfsone) Added "--front" (-F) to keep the update gui infront of TD
. (kfsone) Added Pilot's Federation/Jameson Memorial

v6.0.4 Nov 21 2014 (Beta 3.9.1)
. (kfsone) Added "sell" command (find places to sell a specific item)
. (kfsone) Reactive Armor changed to Reactive Armour
. (kfsone) Added 'Chemical Waste'
. (kfsone) Update GUI now consistently selects text on entering a cell
. (kfsone) Update GUI now selects the first column of the first line on startup
. (kfsone) Update GUI now supports up/down key inputs and has a default size
. (kfsone) Issue#57 Fixed extra cache rebuilds after doing an 'update'
. (kfsone) Changing .prices won't force a full rebuild of the cache
. (kfsone) Better integrated update gui (improved startup times)
. (kfsone) Added "--all" (-A) option to 'update -G' to show ALL items
. (kfsone) (Update GUI) Set 'selling' and 'asking' to 0 to delete an item
. (kfsone) Fixed "buy" command showing multiple hits for multi-station systems

v6.0.3 Nov 21 2014
. (kfsone) Added a GUI to the "update" sub-command, it's experimental:
   - Use <tab>/<shift-tab> to cycle across rows,
   - Use <enter> to drop to the first column of the next line,
   - Scrolling is currently broken - you have to manually scroll. Ick.
   - Use the "--exp" flag to indicate your understanding it is experimental.
     e.g.: trade.py update --exp aulin
. (kfsone) Fixed sqrt crash in buildCache.py in multi-station systems,
. (kfsone) Fixed "local" command not showing stations when using "--detail",
. (kfsone) Renamed "buildcache.py" to "cache.py"

BETA 3: 
CAUTION: So many systems changed with the Beta 3 update that old prices files
won't stand a chance of containing many valid systems. You may want to obtain